# LeoDOS

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.nos3  GEMINI.md  Makefile  docker-compose.nos3.yml  docker-compose.yml  index.html  rust-analyzer.toml
apps/colonies-executor/fsw/: Cargo.toml  build.rs
apps/colonies_executor/fsw/: Cargo.toml  build.rs
apps/colonies_executor/fsw/.cargo/: config.toml
apps/colonies_executor/fsw/src/: functions.rs  lib.rs  transport.rs
apps/demo-rust-app/fsw/: Cargo.toml  build.rs  cfs.h
apps/demo-rust-app/fsw/src/: lib.rs  placeholder.c
apps/demo_rust_app/fsw/: Cargo.toml
apps/demo_rust_app/fsw/src/: lib.rs  placeholder.c
apps/gossip/fsw/: Cargo.toml  build.rs
apps/gossip/fsw/src/: lib.rs
apps/nos3_demo/fsw/: Cargo.toml  build.rs
apps/nos3_demo/fsw/src/: lib.rs  placeholder.c
apps/ping/fsw/: Cargo.toml  build.rs
apps/ping/fsw/src/: lib.rs
apps/router/fsw/: Cargo.toml  build.rs
apps/router/fsw/src/: lib.rs  placeholder.c
apps/router/fsw/tables/: router_ground.c  router_ground.h
apps/sample_rust_app/fsw/: Cargo.toml  build.rs
apps/sample_rust_app/fsw/src/: lib.rs  placeholder.c
apps/sb_echo/fsw/: Cargo.toml  build.rs
apps/sb_echo/fsw/src/: lib.rs
apps/sim_client/fsw/: Cargo.toml  build.rs
apps/sim_client/fsw/src/: lib.rs
apps/spacecomp/fsw/: Cargo.toml  build.rs
apps/spacecomp/fsw/.cargo/: config.toml
apps/spacecomp/fsw/src/: data.rs  fmt.rs  handler.rs  isl.rs  lib.rs  machine.rs  net.rs  placeholder.c  stack.rs
apps/spacecomp_wildfire/fsw/: Cargo.toml  build.rs
apps/spacecomp_wildfire/fsw/src/: lib.rs
apps/srspp_receiver/fsw/: Cargo.toml  build.rs
apps/srspp_receiver/fsw/src/: lib.rs  placeholder.c
apps/wildfire/fsw/: Cargo.toml  build.rs
apps/wildfire/fsw/.cargo/: config.toml
apps/wildfire/fsw/src/: lib.rs  placeholder.c
crates/leodos-ccsds/: Cargo.toml
crates/leodos-ccsds/src/: lib.rs  spp.rs
crates/leodos-ccsds/src/cfdp/: filestore.rs  mod.rs  pdu.rs
crates/leodos-ccsds/src/cfe/: mod.rs  tc.rs  tm.rs
crates/leodos-ccsds/src/crc/: mod.rs
crates/leodos-ccsds/src/datalink/: cltu.rs  mod.rs  randomizer.rs  tctf.rs  tmtf.rs
crates/leodos-ccsds/src/segmentation/: mod.rs  reassembler.rs  segmenter.rs
crates/leodos-lib42/: Cargo.toml  build.rs
crates/leodos-lib42/.cargo/: config.toml
crates/leodos-lib42/src/: dcm.rs  env.rs  ffi.rs  lib.rs  math.rs  orbit.rs  signal.rs  sim.rs  time.rs  types.rs
crates/leodos-libcfs/: Cargo.toml  build.rs  nos3_hwlib_wrapper.h  todo.md  type-prompt.sh  unused-prompt.sh
crates/leodos-libcfs/.cargo/: config.toml
crates/leodos-libcfs/scripts/: find-unused-bindings.sh
crates/leodos-libcfs/src/: app.rs  bridge.rs  bridge_client.rs  cell.rs  error.rs  ffi.rs  lib.rs  log.rs  nos3.rs  status.rs  util.rs
crates/leodos-libcfs/src/bp/: channel.rs  contact.rs  eid.rs  instance.rs  mod.rs  types.rs
crates/leodos-libcfs/src/cf/: async_api.rs  channel.rs  chunk.rs  clist.rs  codec.rs  config.rs  crc.rs  engine.rs  mod.rs  msg.rs  pdu.rs  timer.rs  transaction.rs  types.rs
crates/leodos-libcfs/src/cfe/: duration.rs  mod.rs  tbl.rs  time.rs
crates/leodos-libcfs/src/macros/: asserts.rs  mod.rs
crates/leodos-libcfs/src/nos3/: can.rs  gpio.rs  i2c.rs  mem.rs  mod.rs  socket.rs  spi.rs  trq.rs  uart.rs
crates/leodos-libcfs/src/os/: alloc.rs  app.rs  env.rs  fs.rs  heap.rs  id.rs  mod.rs  module.rs  net.rs  queue.rs  shell.rs  sync.rs  task.rs  time.rs  timebase.rs  timer.rs  util.rs  version.rs
crates/leodos-libcfs/src/psp/: cds.rs  eeprom.rs  exception.rs  mem.rs  mod.rs  restart.rs  time.rs  version.rs  watchdog.rs
crates/leodos-libcfs/src/runtime/: dyn_scope.rs  join.rs  mod.rs  reactor.rs  scope.rs  select.rs  select_either.rs  task.rs  time.rs
crates/leodos-libcfs/tests/: cfs_stubs.rs
crates/leodos-libcfs/tests/shims/: mod.rs
crates/leodos-libcfs/tests/ut/: mod.rs
crates/leodos-libcsp/: Cargo.toml  build.rs
crates/leodos-libcsp/.cargo/: config.toml
crates/leodos-libcsp/scripts/: find-unused-bindings.sh
crates/leodos-libcsp/src/: bridge.rs  cmp.rs  config.rs  crc.rs  crypto.rs  csp.rs  error.rs  ffi.rs  id.rs  if_udp.rs  iface.rs  lib.rs  promisc.rs  rdp.rs  rtable.rs  sfp.rs  time.rs  types.rs
crates/leodos-libwamr/: Cargo.toml  build.rs
crates/leodos-libwamr/src/: lib.rs  memory.rs  reflect.rs  runtime.rs  thread.rs  value.rs  wasi.rs
crates/leodos-protocols/: Cargo.toml
crates/leodos-protocols/.cargo/: config.toml
crates/leodos-protocols/examples/demo/: CLAUDE.md  Cargo.toml
crates/leodos-protocols/examples/srspp_demo/: Cargo.toml
crates/leodos-protocols/src/: buffer_pool.rs  ids.rs  lib.rs  utils.rs
crates/leodos-protocols/src/application/: mod.rs
crates/leodos-protocols/src/buffer_pool/: cfs.rs  heap.rs
crates/leodos-protocols/src/coding/: cadu.rs  cltu.rs  convolutional.rs  crc.rs  ldpc.rs  mod.rs  physical.rs  pipeline.rs  proximity1.rs  randomizer.rs  reed_solomon.rs  rice.rs
crates/leodos-protocols/src/datalink/: mod.rs  (+1 more)
crates/leodos-protocols/tests/: link_layer.rs  local_channel.rs  passthrough.rs  ptp.rs  srspp_endpoint.rs
crates/leodos-spacecomp/: Cargo.toml
crates/leodos-spacecomp/.cargo/: config.toml
crates/leodos-spacecomp/src/: bufwriter.rs  config.rs  coordinator.rs  error.rs  job.rs  lib.rs  node.rs  packet.rs  reader.rs  transport.rs
crates/leodos-spacepacket/: Cargo.toml
crates/leodos-spacepacket/src/: builder.rs  lib.rs
crates/leodos-srspp-echo/: Cargo.toml
crates/leodos-srspp-echo/.cargo/: config.toml
crates/leodos-srspp-echo/src/: lib.rs
tools/eosim/: pyproject.toml
tools/eosim/examples/: california_wildfire.yaml
tools/eosim/output/: metadata.yaml
tools/leodos-cli/: Cargo.toml
tools/leodos-cli/src/: build.rs  dashboard.rs  datagen.rs  definitions.rs  deploy.rs  fs.rs  logs.rs  main.rs  sim.rs  status.rs  tc.rs  tm.rs
tools/leodos-executor/: Cargo.toml
tools/leodos-executor/src/: main.rs  udp_link.rs
tools/leodos-ground/: Cargo.toml
tools/leodos-ground/src/: bridge.rs  lib.rs  main.rs  udp_link.rs
(+3158 files in other folders)
