[package]
name = "leodos-ccsds"
version = "0.1.0"
edition = "2021"

[dependencies]
zerocopy = { version = "0.8.27", features = ["derive"] }
heapless = "0.9.1"
crc = { version = "3.0", optional = true }

embedded-io-async = { version = "0.7", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["async-await-macro"], optional = true }
pin-utils = { version = "0.1", optional = true }
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "macros", "time"], optional = true }
tokio-stream = { version = "0.1.17", optional = true }
bon = { version = "3.8.1", default-features = false }


[features]
default = ["std", "async", "tokio", "crc"]
std = []

# Enables the new generic async CFDP API
async = [
    "dep:embedded-io-async",
    "dep:futures-util",
    "dep:pin-utils",
    "dep:tokio-stream",
]

# Enables the Tokio backend for the async API
tokio = ["async", "std", "dep:tokio"]

# Enables the leodos-libcfs backend for the async API
cfs = ["async"]

[dev-dependencies]
rand = "0.9.2"
