[package]
name = "leodos-libcfs"
version = "0.1.1"
edition = "2021"

[features]
default = []
std = []

[dependencies]
libc = { version = "0.2", default-features = false }
heapless = "0.9.1"
bitflags = "2.10.0"
pin-utils = "0.1.0"
futures = { version = "0.3.28", features = ["async-await"], default-features = false }

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.43"
regex = "1.12.2"
lazy_static = "1.5.0"
walkdir = "2.5.0"
