[package]
name = "leodos-libcfs"
version = "0.1.1"
edition = "2021"

[features]
default = []
std = []
cfdp = []
bp = []
nos3 = []

[dependencies]
libc = { version = "0.2.183", default-features = false }
heapless = "0.9.2"
bitflags = "2.11.0"
pin-utils = "0.1.0"
pin-project = "1.1.11"
futures = { version = "0.3.32", features = ["async-await"], default-features = false }
thiserror = { version = "2.0.18", default-features = false }
bon = { version = "3.9.1", default-features = false }

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.57"
regex = "1.12.3"
lazy_static = "1.5.0"
walkdir = "2.5.0"
