[package]
name = "leodos-libcsp"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for libcsp (Cubesat Space Protocol)"

[features]
default = []
std = []
rdp = []
hmac = []
promisc = []

[dependencies]
libc = { version = "0.2", default-features = false }
bitflags = "2.10.0"
thiserror = "2.0.18"

[build-dependencies]
bindgen = "0.72.1"
regex = "1.12.2"
walkdir = "2.5.0"
