[package]
name = "leodos-protocols"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { version = "2.0.17", default-features = false }
zerocopy = { version = "0.8.27", features = ["derive"] }
heapless = "0.9.2"
crc = "3.3.0"
bon = { version = "3.8.1", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
pin-utils = { version = "0.1.0" }
libm = "0.2.15"
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }

# Optional dependencies
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "macros", "time", "sync"], optional = true }
leodos-libcfs = { path = "../leodos-libcfs", optional = true }

[features]
default = []

std = []
tokio = ["std", "dep:tokio"]
cfs = ["dep:leodos-libcfs"]
nos3 = ["cfs", "leodos-libcfs/nos3"]

[dev-dependencies]
rand = "0.9.2"
futures = { version = "0.3.31", features = ["executor"] }

[profile.release]
panic = "abort"    # Abort on panic
lto = true         # Link-Time Optimization
codegen-units = 1  # Better optimizations
