[package]
name = "leodos-spacepacket"
version = "0.1.0"
edition = "2024"

[features]
std = []
default = ["crc"]
crc = ["dep:crc"]

[dependencies]
zerocopy = { version = "0.8.27", features = ["derive"] }
kani = { version = "0.0.1", optional = true }
crc = { version = "3.3.0", optional = true }

[dev-dependencies]
rand = "0.9.2"
