[package]
name = "leodos-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "leodos"
path = "src/main.rs"

[dependencies]
leodos-protocols = { path = "../../crates/leodos-protocols/" }
zerocopy = { version = "0.8.27", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
