[package]
name = "leodos-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
colonyos = "1.0"
leodos-protocols = { path = "../../crates/leodos-protocols", features = ["tokio"] }
leodos-spacecomp = { path = "../../crates/leodos-spacecomp", default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
zerocopy = { version = "0.8", features = ["derive"] }
