[package]
name = "rust"
version = "0.1.0"
edition = "2024"
authors = ["nsmryan <nsmryan@gmail.com>"]

[lib]
name="rust"
crate-type=["cdylib"]

[dependencies]
libcfs = { path = "../libcfs" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
libc = { version = "0.2", default-features = false }
heapless = "0.9"
embedded-alloc = "0.6"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "sha256"] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[profile.release]
lto = true
panic = 'abort'

[build-dependencies]
bindgen = "0.72.1"
