[package]
name = "colonies_executor"
version = "0.1.0"
edition = "2021"

[lib]
name = "colonies_app"
crate-type = ["cdylib"]

[dependencies]
leodos-protocols = { path = "../../../crates/leodos-protocols", default-features = false }
leodos-libcfs = { path = "../../../crates/leodos-libcfs" }
zerocopy = { version = "0.8.27", features = ["derive"], default-features = false }
heapless = "0.9.1"
thiserror = { version = "2.0.17", default-features = false }

[build-dependencies]
bindgen = "0.72.1"

[profile.release]
lto = true
panic = 'abort'
opt-level = "z"

[profile.dev]
panic = 'abort'
