[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

[lib]
name = "gossip"
crate-type = ["cdylib"]

[dependencies]
leodos-protocols = { path = "../../../crates/leodos-protocols", features = ["cfs"] }
leodos-libcfs = { path = "../../../crates/leodos-libcfs" }
heapless = "0.9"
zerocopy = { version = "0.8", features = ["derive"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
pin-utils = "0.1.0"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"

[profile.dev]
panic = "abort"

[build-dependencies]
bindgen = "0.72.1"
