[package]
name = "ping"
version = "0.1.0"
edition = "2021"

[lib]
name = "ping"
crate-type = ["cdylib"]

[dependencies]
leodos-protocols = { path = "../../../crates/leodos-protocols", features = ["cfs"] }
leodos-libcfs = { path = "../../../crates/leodos-libcfs", features = ["nos3"] }
heapless = "0.9"
zerocopy = { version = "0.8", features = ["derive"] }

[build-dependencies]
bindgen = "0.72.1"
