[package]
name = "sim_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "sim_client"
crate-type = ["cdylib"]

[dependencies]
leodos-libcfs = { path = "../../../crates/leodos-libcfs", features = ["sim"] }
heapless = "0.9"
libc = { version = "0.2", default-features = false }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }

[build-dependencies]
bindgen = "0.71"
